Add UZS to delta output in rates display